--- a/index.html
+++ b/index.html
@@ -1,70 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daily Changing Image (GIFs supported)</title>
-  <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      background-color: #000;
-      overflow: hidden;
-    }
-    img {
-      max-width: 100%;
-      max-height: 100vh;
-      display: block;
-    }
-  </style>
-</head>
-<body>
+<img id="daily-image" src="" alt="صورة اليوم">
 
-  <img id="daily-image" src="" alt="Today's image">
-
-  <script>
+<script>
     const today = new Date();
-    const dayOfWeek = today.getDay(); // 0 = Sunday, 1 = Monday, ..., 6 = Saturday
+    const dayOfWeek = today.getDay(); // 0 = الأحد, 1 = الاثنين, ..., 6 = السبت
 
     let imageUrl = "";
 
-    // The base URL for your files on GitHub
-    // Make sure "HeySayHi" is the correct username and repository name
+    // الرابط الأساسي لملفاتك على GitHub
     const baseUrl = "https://raw.githubusercontent.com/HeySayHi/HeySayHi/main/";
 
     switch (dayOfWeek) {
-      case 0: // Sunday
-        imageUrl = baseUrl + "sunday-image.gif"; // Example: A GIF for Sunday
+      case 0: // الأحد
+        imageUrl = baseUrl + "sunday-image.gif"; 
         break;
-      case 1: // Monday
-        imageUrl = baseUrl + "monday-image.gif"; // Can be a JPG
+      case 1: // الاثنين
+        imageUrl = baseUrl + "monday-image.gif"; 
         break;
-      case 2: // Tuesday
-        imageUrl = baseUrl + "tuesday-image.gif"; // Can be a PNG
+      case 2: // الثلاثاء
+        imageUrl = baseUrl + "tuesday-image.gif"; 
         break;
-      case 3: // Wednesday
-        imageUrl = baseUrl + "wednesday-image.gif"; // Example: A GIF for Wednesday
+      case 3: // الأربعاء
+        imageUrl = baseUrl + "wednesday-image.gif"; 
         break;
-      case 4: // Thursday
+      case 4: // الخميس
         imageUrl = baseUrl + "thursday-image.gif";
         break;
-      case 5: // Friday
-        imageUrl = baseUrl + "friday-image.gif"; // Example: A GIF for Friday
+      case 5: // الجمعة
+        imageUrl = baseUrl + "friday-image.gif"; 
         break;
-      case 6: // Saturday
-        imageUrl = baseUrl + "saturday-image.gif"; // The GIF you uploaded
+      case 6: // السبت
+        imageUrl = baseUrl + "Saturday.gif"; 
         break;
       default:
-        // Default image URL (can be a GIF or any other format)
-        imageUrl = baseUrl + "default-image.jpg"; 
+        imageUrl = baseUrl + "default-image.gif"; 
         break;
     }
 
     document.getElementById("daily-image").src = imageUrl;
-  </script>
-
-</body>
-</html>
+</script>
