--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Random Image</title>
+  <title>Daily Image</title>
   <style>
     body {
       margin: 0;
@@ -23,26 +23,44 @@
 </head>
 <body>
 
-  <img id="random-image" src="" alt="">
+  <img id="daily-image" src="" alt="">
 
   <script>
+    const today = new Date();
+    const dayOfWeek = today.getDay(); // 0 = Sunday, 1 = Monday, ..., 6 = Saturday
+
+    let imageUrl = "";
+
     const baseUrl = "https://raw.githubusercontent.com/HeySayHi/HeySayHi/main/";
 
-    const imageFiles = [
-      "A.gif",
-      "A.gif",
-      "A.gif",
-      "A.gif",
-      "A.gif",
-      "A.gif"
-    ];
+    switch (dayOfWeek) {
+      case 0:
+        imageUrl = baseUrl + "sunday-image.gif"; 
+        break;
+      case 1:
+        imageUrl = baseUrl + "monday-image.gif"; 
+        break;
+      case 2:
+        imageUrl = baseUrl + "tuesday-image.gif"; 
+        break;
+      case 3:
+        imageUrl = baseUrl + "wednesday-image.gif"; 
+        break;
+      case 4:
+        imageUrl = baseUrl + "thursday-image.gif";
+        break;
+      case 5:
+        imageUrl = baseUrl + "friday-image.gif"; 
+        break;
+      case 6:
+        imageUrl = baseUrl + "saturday-image.gif"; 
+        break;
+      default:
+        imageUrl = baseUrl + "default-image.gif"; 
+        break;
+    }
 
-    const randomIndex = Math.floor(Math.random() * imageFiles.length);
-    const randomImageFile = imageFiles[randomIndex];
-
-    const imageUrl = baseUrl + randomImageFile;
-
-    document.getElementById("random-image").src = imageUrl;
+    document.getElementById("daily-image").src = imageUrl;
   </script>
 
 </body>
