--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daily Image</title>
+  <title>صور الأيام</title>
   <style>
     body {
       margin: 0;
@@ -23,37 +23,38 @@
 </head>
 <body>
 
-  <img id="daily-image" src="" alt="">
+  <img id="daily-image" src="" alt="صورة اليوم">
 
   <script>
     const today = new Date();
-    const dayOfWeek = today.getDay(); // 0 = Sunday, 1 = Monday, ..., 6 = Saturday
+    const dayOfWeek = today.getDay(); // 0 = الأحد, 1 = الاثنين, ..., 6 = السبت
 
     let imageUrl = "";
 
+    // The base URL for your images on GitHub
     const baseUrl = "https://raw.githubusercontent.com/HeySayHi/HeySayHi/main/";
 
     switch (dayOfWeek) {
-      case 0:
+      case 0: // الأحد
         imageUrl = baseUrl + "sunday-image.gif"; 
         break;
-      case 1:
+      case 1: // الاثنين
         imageUrl = baseUrl + "monday-image.gif"; 
         break;
-      case 2:
+      case 2: // الثلاثاء
         imageUrl = baseUrl + "tuesday-image.gif"; 
         break;
-      case 3:
+      case 3: // الأربعاء
         imageUrl = baseUrl + "wednesday-image.gif"; 
         break;
-      case 4:
+      case 4: // الخميس
         imageUrl = baseUrl + "thursday-image.gif";
         break;
-      case 5:
+      case 5: // الجمعة
         imageUrl = baseUrl + "friday-image.gif"; 
         break;
-      case 6:
-        imageUrl = baseUrl + "saturday-image.gif"; 
+      case 6: // السبت
+        imageUrl = baseUrl + "Saturday.gif"; 
         break;
       default:
         imageUrl = baseUrl + "default-image.gif"; 
